--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: iRISCV
 description: iRISCV is a miniprogram for RISC-V developers.
-logo: iRISCV.jpg
+logo: assets/iRISCV.jpg
